# src/static/swagger.json
@@ -67,7 +67,7 @@
             "__comentario__": "COMENTARIO: Cuerpo para descrbir un endpoint",
             "get": {
                 "tags": [
-                    "obtiene un reporte de excel en base64"
+                    "APIs de test"
                 ],
                 "parameters": [],
                 "summary": "",
@@ -125,7 +125,7 @@
             "__comentario__": "COMENTARIO: Cuerpo para descrbir un endpoint",
             "get": {
                 "tags": [
-                    "se obtienen los json"
+                    ""
                 ],
                 "parameters": [],
                 "summary": "",
@@ -175,7 +175,113 @@
                     }
                 }
             }
+        },
+
+
+
+
+
+
+
+        "/noti_selec": {
+            "__comentario__": "COMENTARIO: Cuerpo para describir un endpoint",
+            "post": {
+                "tags": [
+                    "se obtienen los json"
+                ],
+                "summary": "Se obtienen todas las notificaciones de un determinado usuario",
+                "parameters": [
+                    {
+                        "name": "id_usuario",
+                        "in": "header",
+                        "description": "ID del usuario",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "fecha",
+                        "in": "header",
+                        "description": "Fecha en formato 'YYYY-MM-DD'",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "date"
+                        }
+                    },
+                    {
+                        "name": "refrescar",
+                        "in": "header",
+                        "description": "Indica si se debe refrescar",
+                        "required": true,
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "base64_encoded_file": {
+                                            "type": "string",
+                                            "description": "Excel en formato base64"
+                                        },
+                                        "success": {
+                                            "type": "boolean",
+                                            "description": "Indica si la solicitud fue exitosa"
+                                        }
+                                    },
+                                    "example": {
+                                        "detalle": [
+                                            {
+                                                "contador_reenvios": 0,
+                                                "detalle": "Alerta estacionamiento seguro! Vehículo patente N° HHSG62",
+                                                "fecha_actualizada": "28/07/2023 10:06:51",
+                                                "fecha_generada": "28/07/2023 10:06:51",
+                                                "id": 262,
+                                                "id_usuario": 1,
+                                                "identificador_tipo": 20,
+                                                "imei_vehiculo": "864606042361328",
+                                                "leida": 0,
+                                                "oculta": 0,
+                                                "tipo": "CronNode"
+                                            }
+                                        ],
+                                        "mensaje": "notificaciones"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "description": "Mensaje que indica que el recurso no fue encontrado"
+                                        }
+                                    },
+                                    "example": {
+                                        "message": "Recurso no encontrado"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
+        
     }
 
     
